--- a/style/objects.css
+++ b/style/objects.css
@@ -1,10 +1,3 @@
-*{
-    font-size: 12px;
-    font-family: Arial;
-    margin: 0;
-    padding: 0;
-}
-
 body, main{
     width: 100%;
     height: 100%;
@@ -33,7 +26,7 @@ body, main{
 }
 /*ratios*/
 .b1-1{aspect-ratio: 1 / 1;}
-.b1-2{aspect-ratio: 1 / 2;}
+.b1-2{aspect-ratio: 9 / 17;}
 .b2-1{aspect-ratio: 2 / 1;}
 
 .b1-1:hover{
@@ -62,7 +55,7 @@ img.inner{
     display: flex;
     align-items: center;
     justify-content: space-around;
-    width: 100%;
+    width: calc(100% - 20px);
     padding: 10px;
 }
 
